- fixed 'welcome ....' box padding that was spilling over

--- a/scss-partials/_header.scss
+++ b/scss-partials/_header.scss
@@ -244,7 +244,7 @@ body {
                 }
                 
                 .header-text {
-                    padding:28px 0;
+                    padding:23px 0;
                     color:#000;
                     font-size:15px;
                 }
